not fixed now, full black screen, size fixes, now on mobile have to work

--- a/index.css
+++ b/index.css
@@ -11,6 +11,11 @@ hr
     padding: 0;
 }
 
+main
+{
+    position: relative;
+}
+
 .middle-align-section
 {
     display: table-cell;
@@ -21,11 +26,10 @@ hr
 
 .page-fixed-header
 {
-    z-index: 100;
+    z-index: 50;
     width: 100%;
     background-color: white;
-    position: fixed;
-    top: 0;
+    position: absolute;
     text-align: center;
     font-family: 'PT Sans Narrow', sans-serif;
     font-size: 32px;
@@ -38,14 +42,14 @@ hr
 
 footer
 {
-    z-index: 100;
+    z-index: 50;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
-    position: fixed;
+    position: absolute;
     bottom: 0;
-    left: 0;
     background-color: white;
-    width: 100%;
+    right: 0;
+    left: 0;
 }
 
 footer .left-align-block
@@ -444,7 +448,7 @@ input[id='sld10']:checked ~ .labels label[for='sld10'] + .title-black-back:hover
     height: 400px;
     border-radius: 5px;
     box-shadow: 0 3px 7px rgba(0,0,0,.25);
-    z-index: 50;
+    z-index: 100;
     text-align: left;
     color: white;
 }
@@ -530,7 +534,7 @@ input[id='sld10']:checked ~ .labels label[for='sld10'] + .title-black-back:hover
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, .8);
-    z-index: 25;
+    z-index: 75;
 }
 
 footer a
